--- a/Hometask/Section3/hometask3v2.yaml
+++ b/Hometask/Section3/hometask3v2.yaml
@@ -100,6 +100,28 @@ spec:
       - name: db-volume
         emptyDir: {}
 ---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
+  name: webapp
+spec:
+  rules:
+  - host: web.app
+    http:
+      paths:
+      - backend:
+          serviceName: webapp
+          servicePort: 80
+        path: /student00
+        #pathType: Perfix
+      - backend:
+          serviceName: webapp
+          servicePort: 80
+        path: /student00(/|$)(.*)
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
